Fix: Mobile responsive layout alignment for Sidebar and Dashboards

--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -32,34 +32,7 @@
     }
 }
 
-/* Col Spans - FIXED */
-.col-span-1 {
-    grid-column: span 1 / span 1;
-}
 
-.col-span-2 {
-    grid-column: span 1 / span 1;
-}
-
-.col-span-4 {
-    grid-column: span 1 / span 1;
-}
-
-@media (min-width: 768px) {
-    .col-span-2 {
-        grid-column: span 2 / span 2;
-    }
-
-    .col-span-4 {
-        grid-column: span 2 / span 2;
-    }
-}
-
-@media (min-width: 1280px) {
-    .col-span-4 {
-        grid-column: span 4 / span 4;
-    }
-}
 
 /* Widget Wrapper */
 .widget-wrapper {
